@startuml
'https://plantuml.com/class-diagram

class File{
    - name : String

    + File (name : String)
    + getName() : String
    + setName(name : String) : void
    + print() : void
}

class Folder{
    - name : String
    - files : ArrayList<File>
    - subFolders : ArrayList<Folder>

    + Folder (name : String)
    + getName() : String
    + setName(name : String) : void
    + addFile (file: File) : void
    + addSubFolder(folder: Folder): void
    + deleteSubFolder(folderName : String) : void
    + print(indent : String) : void
}

Folder "1" *-- "0..*" File
Folder "1" *-- "0..*" Folder : subFolders
@enduml